# AgentTuring

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  save_graph_as_image.py
.github/workflows/: pylint.yml
agentturing/: config.py
agentturing-frontend/: eslint.config.js  package-lock.json  package.json
agentturing-frontend/src/: App.css  App.jsx  main.jsx
agentturing/constants/: __init__.py
agentturing/database/: schemas.py  setup_knowledgebase.py  vectorstore.py
agentturing/guardrails/: setup.py
agentturing/model/: embeddings.py  llm.py
agentturing/pipelines/: main_pipeline.py
agentturing/prompts/: __init__.py
agentturing/services/: __init__.py  agentic_backend.py  base.py
agentturing/utils/: sanitize_output.py
